# ray-tracing-in-a-weekend

./: .clang-format  CMakeLists.txt
src/: color.h  main.cpp
src/math/: vec3.h
src/util/: camera.h  color.h  hittable.h  hittable_list.h  interval.h  ray.h  rtweekend.h  sphere.h  square.h
